--- a/Startup Landing page/index.html
+++ b/Startup Landing page/index.html
@@ -4,6 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="app.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<title>Purrfect Match</title>
@@ -31,8 +32,8 @@
 	        <li><a href="#">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Sign Up</a></li>
-	        <li><a href="#">Login</a></li>
+	        <li><a href="#">Sign Up <i class="fas fa-user-plus"></i></a></li>
+	        <li><a href="#">Login <i class="fas fa-user"></i></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -45,7 +46,7 @@
 					<h1>Purrfect Match</h1>
 					<h3>The Only Human-Feline Dating App</h3>
 					<hr/>
-					<button class="btn btn-default btn-lg">Get Started</button>
+					<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i> Get Started!</button>
 				</div>
 			</div>
 		</div>
